Bunch of fixes. Added logo to footer. Fixed scroll to top button positioning. Hid the Get A Quote button from the responsive menu since it was broken.

--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -269,6 +269,9 @@
           width: 100%;
           text-align: center;
       }
+      .get-quote {
+        display: none;
+      }
   }
   .mobilecover{
     background-size: cover;
