--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -7,8 +7,7 @@ footer{
   padding-top: 25px;
   padding-bottom: 25px;
   .logo{
-    align-self: flex-end;
-    margin-bottom: 25px;
+    align-self: center;
   }
   .phone{
     float: right;
@@ -100,6 +99,7 @@ footer{
     }
     .logo {
       flex: 1 0 40%;
+
     }
 }
 .netgain {
