make adjustments to the footer form to style the ajax loader image to not break the layout and to look nicer

--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -274,7 +274,7 @@
   .mobilecover{
     background-size: cover;
   }
-  .footer-form .submit-container {
+  div.wpcf7 .footer-form .submit-container {
       margin-top: 5px;
       -webkit-box-flex: 0;
       -ms-flex: 0;
