--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -256,12 +256,13 @@ select {
     padding: 15px 25px !important;
   }
 }
-.footer-form {
+div.wpcf7 .footer-form {
     display: flex;
     flex-flow: row wrap;
     align-items: center;
     justify-content: center;
-    padding-top: 2rem;
+    margin-top: 2rem;
+    position: relative;
     p,
     > .wpcf7-form-control-wrap {
         flex: 1 0 0%;
@@ -274,7 +275,7 @@ select {
     }
     .submit-container {
         flex: 1 0 100%;
-        margin-top: 5rem;
+        margin-top: 2rem;
         .button{
           padding: 10px 25px;
         }
@@ -325,10 +326,22 @@ select {
     div.wpcf7-response-output {
         margin: 2rem auto;
     }
+    .ajax-loader {
+      display: block;
+      width: 100%;
+      position: absolute;
+      left: -3px;
+      background-position: center center;
+      background-repeat: no-repeat;
+      top: 0;
+      background-color: rgba(0,174,239,0.7);
+      height: 100%;
+      background-image: url('img/ajax-loader.gif');
+    }
 }
 
 @media screen and (max-width: 1199px) {
-    .footer-form {
+    div.wpcf7 .footer-form {
         p {
             flex-basis: 23%
         }
@@ -384,7 +397,7 @@ select {
             padding-right: 15px;
         }
     }
-    .footer-form {
+    div.wpcf7 .footer-form {
         p {
             flex-basis: 47%;
         }
@@ -399,7 +412,7 @@ select {
         }
     }
 
-    .footer-form {
+    div.wpcf7 .footer-form {
         p {
             flex-basis: 100%;
         }
@@ -407,7 +420,7 @@ select {
 }
 
 @media screen and (max-width: 412px) {
-    .footer-form {
+    div.wpcf7 .footer-form {
         > .wpcf7-form-control-wrap {
             // margin: 32px 24px 0 0;
             // outline: none;
