Replace the default loader icon for the other forms to match the same style as the footer one. Also renamed the icons to better differentiate the two

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -14,6 +14,10 @@
   margin-top: 80px;
   margin-bottom: 40px;
 }
+div.wpcf7 .ajax-loader {
+  background-image: url('img/ajax-loader-main.gif');
+  //Generated at http://ajaxload.info/
+}
 .Contactpage{
   form{
       max-width: 460px;
@@ -336,7 +340,8 @@ div.wpcf7 .footer-form {
       top: 0;
       background-color: rgba(0,174,239,0.7);
       height: 100%;
-      background-image: url('img/ajax-loader.gif');
+      background-image: url('img/ajax-loader-footer.gif');
+      //Generated at http://ajaxload.info/
     }
 }
 
