Adjust styles of form validation messages to make them readable

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -330,6 +330,9 @@ div.wpcf7 .footer-form {
     div.wpcf7-response-output {
         margin: 2rem auto;
     }
+    span.wpcf7-not-valid-tip {
+        color: #FFF;
+    }
     .ajax-loader {
       display: block;
       width: 100%;
