--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -454,6 +454,9 @@
           width: 80%;
         }
     }
+    .column-list {
+      max-height: none;
+    }
 }
 @media only screen and (max-width: 389px) {
    body:not(.sticky-header) {
