--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -15,7 +15,7 @@
         > li {
             display: inline-block;
             position: relative;
-            line-height: 45px;
+            line-height: 4.6rem;
             margin-bottom: 0px;
             margin-left: 15px;
             transition: box-shadow 0.2s ease-in-out;
