--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -64,6 +64,15 @@
           color: #fff;
       }
   }
+  .get-quote {
+    font-size: 2.7rem;
+  }
+  .main-nav>ul>li{
+    line-height: 4rem;
+    >a{
+      font-size: 2rem;
+    }
+  }
   .page-id-168{
     .slider-content .inner-content {
         left: 0;
